@@ -2,22 +2,24 @@ package eu.clarin.cmdi.curation.commons.http;
 
 import eu.clarin.cmdi.curation.commons.conf.HttpConfig;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.*;
-import java.net.http.HttpHeaders;
+
 
 @Component
 public class HttpUtils {
 
-    @Autowired
-    private HttpConfig httpConfig;
+    private final HttpConfig httpConfig;
 
-    public URLConnection getURLConnection(String urlString) throws IOException {
+    public HttpUtils(HttpConfig httpConfig) {
+        this.httpConfig = httpConfig;
+    }
 
-        URL url = new URL(urlString);
+    public URLConnection getURLConnection(String urlString) throws IOException, URISyntaxException {
+
+        URL url = new URI(urlString).toURL();
 
         Proxy proxy = (StringUtils.isNotBlank(httpConfig.getProxyHost()) && (httpConfig.getProxyPort() > 0)) ?
                 new Proxy(Proxy.Type.HTTP, new InetSocketAddress(httpConfig.getProxyHost(), httpConfig.getProxyPort())) :
